compiler/testData/diagnostics/tests/callableReference/bound/functionCallWithoutArguments.fir.kt
fun test() = <!UNRESOLVED_REFERENCE!>("").<!UNRESOLVED_REFERENCE!>hashCode<!>::hashCode<!>
